; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_push_string.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_push_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf_file = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.inf_file*, i32*)* @push_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @push_string(%struct.inf_file* %0, i32* %1) #0 {
  %3 = alloca %struct.inf_file*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct.inf_file* %0, %struct.inf_file** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.inf_file*, %struct.inf_file** %3, align 8
  %7 = getelementptr inbounds %struct.inf_file, %struct.inf_file* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @strcpyW(i32* %9, i32* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @strlenW(i32* %12)
  %14 = add nsw i64 %13, 1
  %15 = load %struct.inf_file*, %struct.inf_file** %3, align 8
  %16 = getelementptr inbounds %struct.inf_file, %struct.inf_file* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 %14
  store i32* %18, i32** %16, align 8
  %19 = load i32*, i32** %5, align 8
  ret i32* %19
}

declare dso_local i32 @strcpyW(i32*, i32*) #1

declare dso_local i64 @strlenW(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
